--- a/ClearAsset/Controllers/Add/AddListingDetail/Cell/DetailTableViewCell.xib
+++ b/ClearAsset/Controllers/Add/AddListingDetail/Cell/DetailTableViewCell.xib
@@ -17,18 +17,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="529" id="KGk-i7-Jjw" customClass="DetailTableViewCell" customModule="ClearAsset" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="419" height="529"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DetailTableViewCell" customModule="ClearAsset" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="419" height="469"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="419" height="529"/>
+                <rect key="frame" x="0.0" y="0.0" width="419" height="469"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4oB-RE-jpH">
-                        <rect key="frame" x="0.0" y="0.0" width="419" height="529"/>
+                        <rect key="frame" x="0.0" y="0.0" width="419" height="469"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Transmission Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Hc-nQ-h9d" customClass="CustomAddTitle" customModule="ClearAsset" customModuleProvider="target">
-                                <rect key="frame" x="8" y="8" width="157" height="40"/>
+                                <rect key="frame" x="16" y="8" width="157" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,7 +37,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tLr-u1-03m">
-                                <rect key="frame" x="371" y="8" width="40" height="40"/>
+                                <rect key="frame" x="363" y="8" width="40" height="40"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera-add" translatesAutoresizingMaskIntoConstraints="NO" id="usQ-Ih-h4Z">
                                         <rect key="frame" x="10" y="10" width="20" height="20"/>
@@ -81,7 +81,7 @@
                                 <cells/>
                             </collectionView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="69K-mC-ysp" customClass="CustomAddTextFeild" customModule="ClearAsset" customModuleProvider="target">
-                                <rect key="frame" x="10" y="225" width="399" height="50"/>
+                                <rect key="frame" x="20" y="225" width="379" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Ej2-vf-XdR"/>
                                 </constraints>
@@ -89,7 +89,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1hJ-Gg-MlO" customClass="CustomAddTitle" customModule="ClearAsset" customModuleProvider="target">
-                                <rect key="frame" x="8" y="196" width="33" height="21"/>
+                                <rect key="frame" x="16" y="196" width="33" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -97,8 +97,8 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isTitle" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAC-ch-0if" customClass="CustomAddTitle" customModule="ClearAsset" customModuleProvider="target">
-                                <rect key="frame" x="8" y="287" width="33" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAC-ch-0if" customClass="CustomAddTitle" customModule="ClearAsset" customModuleProvider="target">
+                                <rect key="frame" x="16" y="287" width="87.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -107,10 +107,10 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="X1N-1z-tVq">
-                                <rect key="frame" x="8" y="316" width="403" height="128"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <rect key="frame" x="20" y="316" width="379" height="145"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="GK6-Iw-3FP"/>
+                                    <constraint firstAttribute="height" constant="145" id="ZJj-ZU-MIZ"/>
                                 </constraints>
                                 <color key="textColor" name="appDarkBlue"/>
                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
@@ -131,21 +131,22 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="oNe-Jb-fue" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" id="2qu-D9-g9K"/>
-                            <constraint firstAttribute="trailing" secondItem="69K-mC-ysp" secondAttribute="trailing" constant="10" id="3bX-U5-w18"/>
+                            <constraint firstAttribute="trailing" secondItem="69K-mC-ysp" secondAttribute="trailing" constant="20" id="3bX-U5-w18"/>
                             <constraint firstItem="tLr-u1-03m" firstAttribute="centerY" secondItem="5Hc-nQ-h9d" secondAttribute="centerY" id="5Uy-aP-Nds"/>
                             <constraint firstItem="X1N-1z-tVq" firstAttribute="top" secondItem="AAC-ch-0if" secondAttribute="bottom" constant="8" id="6lM-b7-f3g"/>
                             <constraint firstItem="oNe-Jb-fue" firstAttribute="top" secondItem="5Hc-nQ-h9d" secondAttribute="bottom" constant="8" id="70C-Xf-WpQ"/>
-                            <constraint firstItem="5Hc-nQ-h9d" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="8" id="93B-Rt-Irs"/>
-                            <constraint firstItem="69K-mC-ysp" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="10" id="CTH-0T-sqT"/>
+                            <constraint firstItem="5Hc-nQ-h9d" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="16" id="93B-Rt-Irs"/>
+                            <constraint firstItem="69K-mC-ysp" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="20" id="CTH-0T-sqT"/>
                             <constraint firstItem="tLr-u1-03m" firstAttribute="top" secondItem="4oB-RE-jpH" secondAttribute="top" constant="8" id="Cep-oI-hSb"/>
-                            <constraint firstItem="AAC-ch-0if" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="8" id="Et1-0V-nQQ"/>
+                            <constraint firstItem="AAC-ch-0if" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="16" id="Et1-0V-nQQ"/>
                             <constraint firstAttribute="trailing" secondItem="oNe-Jb-fue" secondAttribute="trailing" id="IOE-uA-2OQ"/>
+                            <constraint firstAttribute="bottom" secondItem="X1N-1z-tVq" secondAttribute="bottom" constant="8" id="ZLx-co-BwF"/>
                             <constraint firstItem="5Hc-nQ-h9d" firstAttribute="top" secondItem="4oB-RE-jpH" secondAttribute="top" constant="8" id="bDX-2c-N5x"/>
-                            <constraint firstAttribute="trailing" secondItem="X1N-1z-tVq" secondAttribute="trailing" constant="8" id="eqS-Mk-Xwx"/>
-                            <constraint firstItem="1hJ-Gg-MlO" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="8" id="fH7-35-4Pn"/>
+                            <constraint firstAttribute="trailing" secondItem="X1N-1z-tVq" secondAttribute="trailing" constant="20" id="eqS-Mk-Xwx"/>
+                            <constraint firstItem="1hJ-Gg-MlO" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="16" id="fH7-35-4Pn"/>
                             <constraint firstItem="69K-mC-ysp" firstAttribute="top" secondItem="1hJ-Gg-MlO" secondAttribute="bottom" constant="8" id="hGl-Yy-zP1"/>
-                            <constraint firstItem="X1N-1z-tVq" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="8" id="nAf-Bm-yoU"/>
-                            <constraint firstAttribute="trailing" secondItem="tLr-u1-03m" secondAttribute="trailing" constant="8" id="q7h-M0-hiK"/>
+                            <constraint firstItem="X1N-1z-tVq" firstAttribute="leading" secondItem="4oB-RE-jpH" secondAttribute="leading" constant="20" id="nAf-Bm-yoU"/>
+                            <constraint firstAttribute="trailing" secondItem="tLr-u1-03m" secondAttribute="trailing" constant="16" id="q7h-M0-hiK"/>
                             <constraint firstItem="AAC-ch-0if" firstAttribute="top" secondItem="69K-mC-ysp" secondAttribute="bottom" constant="12" id="xAZ-VI-C36"/>
                             <constraint firstItem="1hJ-Gg-MlO" firstAttribute="top" secondItem="oNe-Jb-fue" secondAttribute="bottom" constant="8" id="xMk-Bb-XFb"/>
                         </constraints>
@@ -159,7 +160,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="207.97101449275365" y="155.02232142857142"/>
+            <connections>
+                <outlet property="collectionView" destination="oNe-Jb-fue" id="dD1-aV-AAF"/>
+            </connections>
+            <point key="canvasLocation" x="207.97101449275365" y="134.93303571428569"/>
         </tableViewCell>
     </objects>
     <resources>
