--- a/ClearAsset/Controllers/Menu/WatchList/WatchList.storyboard
+++ b/ClearAsset/Controllers/Menu/WatchList/WatchList.storyboard
@@ -46,7 +46,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="FKA-7e-2yp" firstAttribute="leading" secondItem="OUJ-yq-aI6" secondAttribute="leading" constant="16" id="BrO-u7-sXk"/>
                                     <constraint firstItem="xqR-zA-9KF" firstAttribute="centerY" secondItem="OUJ-yq-aI6" secondAttribute="centerY" id="CoK-1v-B7o"/>
@@ -61,7 +61,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="h28-Ux-3mk">
                                         <rect key="frame" x="42.666666666666657" y="2.6666666666666572" width="342.66666666666674" height="96.666666666666671"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KHl-rN-T0Y">
+                                            <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KHl-rN-T0Y">
                                                 <rect key="frame" x="0.0" y="0.0" width="106.33333333333333" height="96.666666666666671"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="kW0-na-lm4">
@@ -98,7 +98,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZm-Wk-dyi">
+                                            <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hZm-Wk-dyi">
                                                 <rect key="frame" x="118.33333333333334" y="0.0" width="106" height="96.666666666666671"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="sZv-vP-Nkd">
@@ -135,7 +135,7 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5k0-zQ-NgY">
+                                            <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5k0-zQ-NgY">
                                                 <rect key="frame" x="236.33333333333334" y="0.0" width="106.33333333333334" height="96.666666666666671"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="kSP-9f-tRG">
@@ -168,7 +168,7 @@
                                                         <real key="value" value="2"/>
                                                     </userDefinedRuntimeAttribute>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                                                        <color key="value" name="appBorder"/>
+                                                        <color key="value" name="appOrange"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
@@ -184,7 +184,7 @@
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HqM-5i-g5g">
-                                <rect key="frame" x="8" y="218.66666666666669" width="412" height="665.33333333333326"/>
+                                <rect key="frame" x="8" y="218.66666666666669" width="412" height="707.33333333333326"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="gFy-jH-RXG" id="GHi-SN-w3i"/>
@@ -195,11 +195,11 @@
                         <viewLayoutGuide key="safeArea" id="PB9-Ev-PWx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="HqM-5i-g5g" secondAttribute="bottom" id="1ln-pf-L2L"/>
                             <constraint firstItem="OUJ-yq-aI6" firstAttribute="height" secondItem="riI-9X-mhW" secondAttribute="height" multiplier="0.07" id="3iO-8Z-RFo"/>
                             <constraint firstItem="ttN-iJ-OJD" firstAttribute="top" secondItem="OUJ-yq-aI6" secondAttribute="bottom" id="4uU-vd-9Xd"/>
                             <constraint firstItem="PB9-Ev-PWx" firstAttribute="trailing" secondItem="OUJ-yq-aI6" secondAttribute="trailing" id="62Y-8J-ang"/>
                             <constraint firstItem="PB9-Ev-PWx" firstAttribute="trailing" secondItem="ttN-iJ-OJD" secondAttribute="trailing" id="9l1-Qe-Oe3"/>
-                            <constraint firstItem="PB9-Ev-PWx" firstAttribute="bottom" secondItem="HqM-5i-g5g" secondAttribute="bottom" constant="8" id="BvG-ZS-4UT"/>
                             <constraint firstItem="OUJ-yq-aI6" firstAttribute="leading" secondItem="PB9-Ev-PWx" secondAttribute="leading" id="HlK-58-JBZ"/>
                             <constraint firstItem="PB9-Ev-PWx" firstAttribute="trailing" secondItem="HqM-5i-g5g" secondAttribute="trailing" constant="8" id="Nrt-nY-TmF"/>
                             <constraint firstItem="ttN-iJ-OJD" firstAttribute="leading" secondItem="PB9-Ev-PWx" secondAttribute="leading" id="XfA-mm-Xj1"/>
@@ -211,6 +211,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="YDW-YK-osZ"/>
                     <connections>
+                        <outlet property="btnAuction" destination="KHl-rN-T0Y" id="NXl-nD-cla"/>
+                        <outlet property="btnSale" destination="5k0-zQ-NgY" id="yZA-pJ-6D6"/>
+                        <outlet property="btnTender" destination="hZm-Wk-dyi" id="2Ce-Vj-KSL"/>
                         <outlet property="mainTable" destination="HqM-5i-g5g" id="Ve2-fW-19p"/>
                     </connections>
                 </viewController>
@@ -248,11 +251,11 @@
         <namedColor name="appGray">
             <color red="0.4392156862745098" green="0.4392156862745098" blue="0.4392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="appOrange">
+            <color red="0.95686274509803926" green="0.34901960784313724" blue="0.019607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
