--- a/ClearAsset/Controllers/TabBar/Category/Product/Product.storyboard
+++ b/ClearAsset/Controllers/TabBar/Category/Product/Product.storyboard
@@ -57,7 +57,7 @@
                                                 <rect key="frame" x="146" y="272.5" width="122.5" height="27.5"/>
                                             </pageControl>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" tag="2000" contentMode="scaleToFill" keyboardDismissMode="onDrag" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="230-PV-jbD">
-                                                <rect key="frame" x="0.0" y="308" width="414" height="104"/>
+                                                <rect key="frame" x="0.0" y="316" width="414" height="104"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="104" id="HVS-2u-aLB"/>
@@ -75,111 +75,111 @@
                                                 </connections>
                                             </collectionView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000 JOHN DEERE 8410 MFWD Tractor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KtG-BK-rWj">
-                                                <rect key="frame" x="16" y="424" width="305.5" height="20"/>
+                                                <rect key="frame" x="16" y="432" width="305.5" height="20"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="17"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="locationDisable" translatesAutoresizingMaskIntoConstraints="NO" id="dam-nm-qwI">
-                                                <rect key="frame" x="16" y="454" width="30" height="30"/>
+                                                <rect key="frame" x="16" y="462" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="dam-nm-qwI" secondAttribute="height" multiplier="1:1" id="4Hr-r5-5At"/>
                                                     <constraint firstAttribute="height" constant="30" id="NpE-A9-nZa"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maitland, Western Cape, ZAF" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BsU-vf-f3L">
-                                                <rect key="frame" x="54" y="460.5" width="197" height="17.5"/>
+                                                <rect key="frame" x="54" y="468.5" width="197" height="17.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="15"/>
                                                 <color key="textColor" name="appGray"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="byV-SV-SBe">
-                                                <rect key="frame" x="0.0" y="490" width="414" height="1"/>
+                                                <rect key="frame" x="0.0" y="498" width="414" height="1"/>
                                                 <color key="backgroundColor" name="appBorder"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="1" id="xTS-MQ-IB4"/>
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detailed equipment:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEn-Tl-iL1">
-                                                <rect key="frame" x="16" y="507" width="144" height="19"/>
+                                                <rect key="frame" x="16" y="515" width="144" height="19"/>
                                                 <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="16"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meter Reads:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Y2-EJ-4Cf">
-                                                <rect key="frame" x="34" y="534" width="78.5" height="15.5"/>
+                                                <rect key="frame" x="34" y="542" width="78.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="185,425 Mi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xNl-OP-MZM">
-                                                <rect key="frame" x="116.5" y="534" width="65" height="15.5"/>
+                                                <rect key="frame" x="116.5" y="542" width="65" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="In Yard:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b3U-U0-qEs">
-                                                <rect key="frame" x="34" y="557.5" width="44" height="15.5"/>
+                                                <rect key="frame" x="34" y="565.5" width="44" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="true" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDJ-dZ-lZq">
-                                                <rect key="frame" x="82" y="557.5" width="23" height="15.5"/>
+                                                <rect key="frame" x="82" y="565.5" width="23" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MxK-a7-QpP">
-                                                <rect key="frame" x="34" y="581" width="29" height="15.5"/>
+                                                <rect key="frame" x="34" y="589" width="29" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQ6-HW-bsN">
-                                                <rect key="frame" x="67" y="581" width="29" height="15.5"/>
+                                                <rect key="frame" x="67" y="589" width="29" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Manufacturer:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BYQ-M1-GwS">
-                                                <rect key="frame" x="34" y="604.5" width="81" height="15.5"/>
+                                                <rect key="frame" x="34" y="612.5" width="81" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="John Deere" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tn8-om-eE7">
-                                                <rect key="frame" x="119" y="604.5" width="66.5" height="15.5"/>
+                                                <rect key="frame" x="119" y="612.5" width="66.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MFWD Tractor" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dn-lX-kEZ">
-                                                <rect key="frame" x="105" y="628" width="84.5" height="15.5"/>
+                                                <rect key="frame" x="105" y="636" width="84.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Serial Number or VIN:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Utp-4Z-axU">
-                                                <rect key="frame" x="34" y="651.5" width="126.5" height="15.5"/>
+                                                <rect key="frame" x="34" y="659.5" width="126.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RW8410P006417" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j2c-2H-HHM">
-                                                <rect key="frame" x="164.5" y="651.5" width="101.5" height="15.5"/>
+                                                <rect key="frame" x="164.5" y="659.5" width="101.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Asset Type:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rM-MO-nkJ">
-                                                <rect key="frame" x="34" y="628" width="67" height="15.5"/>
+                                                <rect key="frame" x="34" y="636" width="67" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="13"/>
                                                 <color key="textColor" name="appDetail"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BMB-BN-OfD">
-                                                <rect key="frame" x="0.0" y="683" width="414" height="470"/>
+                                                <rect key="frame" x="0.0" y="691" width="414" height="470"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="470" id="uDN-3e-0Mi"/>
@@ -243,7 +243,7 @@
                                             <constraint firstItem="KtG-BK-rWj" firstAttribute="top" secondItem="230-PV-jbD" secondAttribute="bottom" constant="12" id="bXp-wQ-tI0"/>
                                             <constraint firstItem="5Dn-lX-kEZ" firstAttribute="leading" secondItem="7rM-MO-nkJ" secondAttribute="trailing" constant="4" id="bsQ-JV-V2Z"/>
                                             <constraint firstItem="BsU-vf-f3L" firstAttribute="centerY" secondItem="dam-nm-qwI" secondAttribute="centerY" id="dV5-lB-cqZ"/>
-                                            <constraint firstItem="230-PV-jbD" firstAttribute="top" secondItem="XXd-tu-arP" secondAttribute="bottom" id="e0J-Mh-y5J"/>
+                                            <constraint firstItem="230-PV-jbD" firstAttribute="top" secondItem="XXd-tu-arP" secondAttribute="bottom" constant="8" id="e0J-Mh-y5J"/>
                                             <constraint firstItem="BsU-vf-f3L" firstAttribute="leading" secondItem="dam-nm-qwI" secondAttribute="trailing" constant="8" symbolic="YES" id="foF-Cu-LIe"/>
                                             <constraint firstItem="3Y2-EJ-4Cf" firstAttribute="top" secondItem="GEn-Tl-iL1" secondAttribute="bottom" constant="8" id="gw1-Bh-eyH"/>
                                             <constraint firstItem="j2c-2H-HHM" firstAttribute="leading" secondItem="Utp-4Z-axU" secondAttribute="trailing" constant="4" id="hE8-OL-2MU"/>
